tests/baselines/reference/parserStrictMode6.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts(2,1): error TS1100: Invalid use of 'eval' in strict mode.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts(2,1): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode6.ts (2 errors) ====
    "use strict";
    eval++;
    ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
    ~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.